--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="min-h-screen bg-amber-600"></div>
+    <div id="root" class="h-dvh bg-amber-600"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
