--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
-    <div id="root" class="h-dvh bg-amber-600"></div>
+  <body class="w-full">
+    <div id="root" class="h-dvh w-dvh bg-amber-600"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
