--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body class="w-full">
-    <div id="root" class="h-dvh w-dvh bg-amber-600"></div>
+    <div id="root" class="h-dvh w-full bg-amber-600"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
