--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="w-full">
+  <body class="w-full bg-gray-900">
     <div
       id="root"
       class="h-dvh bg-amber-600 flex justify-center items-center w-full"
